# tsne

./: .dockerignore  .gitignore  BUILD.md  MANIFEST.in  Makefile  README.md  requirements.txt  setup.py
docker/: README.md  dockerutils.cfg
docker/app/: Dockerfile
docker/base/: Dockerfile  docker-entrypoint.sh
docker/build-debian/: Dockerfile  build-wheels.sh  repair-all.sh
docker/build-manylinux/: Dockerfile  build-wheel.sh
docker/build-windows/: Dockerfile
docker/dev/: Dockerfile  test.py
docker/jenkins/: Dockerfile
docker/prod/: Dockerfile
scripts/: test-mnist.py
tsne/: __init__.py  _version.py  bh_sne.pyx  bh_sne_3d.pyx
tsne/bh_sne_src/: .gitignore  CMakeLists.txt  Makefile  bhtsne.py  linux_perf_test.sh  pack_analysis_h5.py  sptree.cpp  sptree.h  tsne.cpp  tsne.h  vptree.h
